<resources>
    <string name="app_name">广师宝</string>
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string name="network_errror">网络异常，请检查网络设置</string>
    <!--通用-->
    <string name="get_verify_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <!-- 登录界面 -->
    <string name="login">登录</string>
    <string name="passwort_hint">密  码</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="account_hint">请输入手机号/学号</string>
    <!-- 找回密码 -->
    <string name="find_tips">请输入您要找回密码的账号关联的手机号</string>
    <string name="find_phone">请输入您的手机号码</string>
    <string name="find_newpassword">请输入6-20位密码</string>
    <string name="cant_find_user">该手机号尚未注册广师掌中宝</string>
    <string name="find_no_phone">注册时不是用自己的手机号码,</string>
    <string name="find_no_how">怎么办？</string>
    <string name="send_verification">提交</string>
    <string name="instruction">广师掌中宝是实名学习平台，请用您本人的手机号注册或登录，方便合作联系。\n
        建议您：\n
        1、重新注册一个自己专属的合作帐号\n
        2、您的手机也已注册过？请直接登录或找回密码\n
        3、您有多个帐号？请联系我们合并020-66351168</string>
    <string name="contact_us">联系我们：</string>
    <string name="my_info_no_complete">业务圈是实名交换社区，请完善你的资料</string>
    <!-- 核对个人资料 -->
    <string name="phone_number">手机&#160;&#160;:&#160;&#160;</string>

    <!-- 填写验证码 -->
    <string name="get_verification_code">获取验证码</string>
    <string name="get_verification_wait_code">获取验证码（%s）</string>
    <string name="login_verification_message">广师掌中宝是您与他人合作的工具，为确保您的信息安全，我们需要通过手机号验证您的身份；如不是你的手机号，请重新注册</string>
    <string name="login_no_bind_tip">广师掌中宝是您与他人合作的工具，为了方便合作，请先绑定手机号。</string>
    <string name="verification_tips">我们给您的手机 +86 % 发送了一条短信，请输入手机获取的短信验证码。</string>
    <string name="hand_in_verification">提交验证码</string>
    <string name="input_verification">填写验证码</string>
    <string name="reget_verification_code">重新获取（%s）</string>
    <string name="account_registered">该手机号码已注册，请换用其它手机号码注册或用该手机号码登录</string>
    <!--主界面-我-->
    <string name="mine_prompt">完善资料，获取适合您的请求和人脉</string>
    <string name="mine_name">刘远西</string>
    <string name="mine_position">（职位为空）</string>
    <string name="mine_friends_num">通知</string>
    <string name="mine_project_num">讲座</string>
    <string name="mine_vistor">师兄师姐</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="mine_setting">设置</string>
    <string name="mine_version_update">版本更新</string>
    <string name="password">密码</string>
    <string name="notification_tips">你现在无法收到新消息通知。请到系统“设置”-“应用”-“广师掌中宝”-“通知”中开启</string>

    <string name="scan_two_code_tips">将二维码图案放在取景框内，即可自动扫描</string>
    <string name="description">Hugh Michael Jackman is an Australian actor, singer and producer. Jackman has won international recognition for playing different roles in various film genres. \n\nHe is best known for his long-running role as Wolverine in the X-Men film series, as well as for his lead roles in the romantic-comedy fantasy Kate &amp; Leopold (2001), the action-horror film Van Helsing (2004)...
    \n\nHugh Michael Jackman is an Australian actor, singer and producer. Jackman has won international recognition for playing different roles in various film genres. \n\nHe is best known for his long-running role as Wolverine in the X-Men film series, as well as for his lead roles in the romantic-comedy fantasy Kate &amp; Leopold (2001), the action-horror film Van Helsing (2004)...</string>
    <string name="hongniang_search_null">广师未能找到双方都有适合对方的请求</string>
    <string name="hongniang_search_null_title">通常广师找不到的原因：</string>
    <string name="hongniang_search_null_reason1">1、你的请求要求范围较窄，试试</string>
    <string name="hongniang_search_null_reason2">2、你已有的请求不适合其他师兄师姐</string>
    <string name="hongniang_publish_again">再发布条请求看看</string>
    <string name="hongniang_use_finsh">广师每天职位每个用户牵线10个师兄师姐</string>
    <string name="hongniang_use_finsh_tips">请认真对待每条可能交换的请求</string>
    <string name="hongniang_project_show_tips">你发布的请求越多，广师帮助牵线的师兄师姐越多。</string>
    <string name="hongniang_setting_tips">告诉广师你想要什么样的请求。</string>
    <string name="hongniang_searching">广师正在为你寻找合适的师兄师姐。</string>
    <string name="hongniang_searching_tips">你发布的请求越多，广师能够配对的师兄师姐越多。</string>
    <string name="hongniang_search_tips">广师帮你找到双方都有适合对方请求的人，双方都需要至少1个请求才能配对。</string>
    <!--设置-->
    <string name="setting_title">设置</string>
    <string name="private_setting">隐私设置</string>
    <string name="black_list">黑名单</string>
    <string name="other_setting">其他</string>
    <string name="new_message_setting">新消息通知</string>
    <string name="voice">声音</string>
    <string name="circle_voice">群聊声音</string>
    <string name="shake">震动</string>
    <string name="circle_shake">群聊震动</string>
    <string name="set_top">聊天置顶</string>
    <string name="about">关于</string>
    <string name="exit">退出登录</string>
    <string name="exit_warning">确定要退出登录吗？</string>
    <!-- 核对个人资料 -->
    <string name="name">姓名</string>
    <string name="fill_in_name">请输入姓字</string>
    <string name="fill_in_compary">请输入学院名称</string>
    <string name="fill_in_password">请输入6-20位密码</string>
    <string name="public_ywq_please_choose">请选择</string>

    <!--个人资料编辑-->
    <string name="user_info_personal_contractor_hint">如果你是承包商请选择</string>
    <string name="user_info_gender">性别</string>
    <string name="user_info_phone1">手机</string>
    <string name="user_info_compary_name">学院</string>
    <string name="user_info_male">男</string>
    <string name="user_info_female">女</string>
    <string name="user_info_hobbies">兴趣爱好</string>
    <string name="user_info_position">职位</string>
    <string name="user_info_product_management">经营产品</string>
    <string name="user_info_client_location">业务地区</string>
    <string name="user_info_business_experience">业务经验</string>
    <string name="user_info_birthday">生日</string>
    <string name="user_info_native_place">籍贯</string>
    <string name="user_info_personal_hobby_hint">让师兄师姐更多了解你</string>
    <string name="user_info_personal_birthplace_hint">选择故乡，发现老乡</string>
    <string name="user_info_public_ywq_finish">完成</string>

    <string name="info_name">姓名</string>
    <string name="info_company">学院全称</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
