<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f3f3f3"
    android:orientation="vertical">

    <app.gseasypro.com.utils.ui.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/orange_ff5500"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/font_36" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_18"
        android:paddingLeft="@dimen/padding_15"
        android:paddingRight="@dimen/padding_15"
        android:paddingTop="@dimen/padding_20">


        <LinearLayout
            android:id="@+id/ll_get_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rl_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_gray_square"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_15"
                    android:paddingLeft="@dimen/padding_15"
                    android:paddingRight="@dimen/padding_15"
                    android:text="+86"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/font_32" />

                <app.gseasypro.com.utils.ui.widget.EnlargeCrossEditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawablePadding="@dimen/padding_15"
                    android:drawableRight="@mipmap/icon_login_clear"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/find_phone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingBottom="@dimen/padding_15"
                    android:paddingLeft="@dimen/padding_15"
                    android:paddingRight="@dimen/padding_15"
                    android:paddingTop="@dimen/padding_15"
                    android:singleLine="true"
                    android:textColor="@color/black_333333"
                    android:textColorHint="@color/gray_999999"
                    android:textSize="@dimen/font_32" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_ver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <app.gseasypro.com.utils.ui.widget.EnlargeCrossEditText
                    android:id="@+id/et_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_gray_square"
                    android:drawablePadding="15dp"
                    android:drawableRight="@mipmap/icon_login_clear"
                    android:hint="@string/input_verification"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingBottom="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:singleLine="true"
                    android:textColor="@color/black_333333"
                    android:textColorHint="@color/gray_999999"
                    android:textSize="@dimen/font_32" />

                <Button
                    android:id="@+id/bt_get_verification"
                    style="@style/OrangeBigButton"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:text="@string/get_verification_code"
                    android:textSize="@dimen/font_28" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit_verifycode"
                style="@style/OrangeBigButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="确定"
                android:textSize="@dimen/font_32" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">


            <app.gseasypro.com.utils.ui.widget.EnlargeCrossEditText
                android:id="@+id/et_newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/shape_gray_square"
                android:drawablePadding="@dimen/padding_15"
                android:drawableRight="@mipmap/icon_login_clear"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/find_newpassword"
                android:maxLength="20"
                android:paddingBottom="@dimen/padding_15"
                android:paddingLeft="@dimen/padding_15"
                android:paddingRight="@dimen/padding_15"
                android:paddingTop="@dimen/padding_15"
                android:singleLine="true"
                android:textColor="@color/black_333333"
                android:textColorHint="@color/gray_999999"
                android:textSize="@dimen/font_32" />

            <Button
                android:id="@+id/btn_send"
                style="@style/OrangeBigButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/send_verification"
                android:textSize="@dimen/font_32" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/find_no_phone"
                android:textColor="@color/gray_999999"
                android:textSize="@dimen/font_26" />

            <TextView
                android:id="@+id/tv_how"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/find_no_how"
                android:textColor="@color/blue_2277dd"
                android:textSize="@dimen/font_26" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_how"
            android:lineSpacingExtra="3dp"
            android:text="@string/instruction"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/font_26"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.gseasypro.app.utils.ContactUs
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"></com.gseasypro.app.utils.ContactUs>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>